Add more CSS, sqlitedb

--- a/default.css
+++ b/default.css
@@ -7,3 +7,36 @@
 .goodiefooter {
     background: aqua;
 }
+.goodieerror {
+    color: red;
+}
+
+table.goodietable {
+
+}
+
+table.goodietable th {
+    background-color: #AAAAFF;
+}
+
+table.goodietable td {
+    background-color: aqua;
+}
+
+table.goodietable th:nth-child(odd) {
+    background-color: #AAAAFF;
+}
+
+table.goodietable td:nth-child(odd) {
+    background-color: aqua;
+}
+
+table.goodietable th:nth-child(even) {
+    background-color: #00FF00;
+}
+
+table.goodietable td:nth-child(even) {
+    background-color: aquamarine;
+}
+
+
